static/style.css
/* Define themes */

/* Constants */
:root {
    --nsfw: #ff5c5d;
    --admin: #ea0027;

    /* Reddit redirect warning constants */
    --popup-red: #ea0027;
    --popup-black: #111;
    --popup-text: #fff;
    --popup-background-1: #0f0f0f;
    --popup-background-2: #220f0f;
    --popup-reddit-url: var(--popup-red);

    --popup-background: repeating-linear-gradient(
        -45deg,
        var(--popup-background-1),
        var(--popup-background-1) 50px,
        var(--popup-background-2) 50px,
        var(--popup-background-2) 100px
    );

    --popup-toreddit-background: var(--popup-black);
    --popup-toreddit-text: var(--popup-red);
    --popup-goback-background: var(--popup-red);
    --popup-goback-text: #222;
    --popup-border: 1px solid var(--popup-red);

    --footer-height: 30px;
}

@font-face {
    font-family: "Inter";
    src: url("/Inter.var.woff2") format("woff2-variations");
    font-style: normal;
    font-weight: 100 900;
}

/* Automatic theme selection */
:root,
.dark {
    /* Default & fallback theme (dark) */
    --accent: #d54455;
    --green: #5cff85;
    --text: white;
    --foreground: #222;
    --background: #0f0f0f;
    --outside: #1f1f1f;
    --post: #161616;
    --panel-border: 1px solid #333;
    --highlighted: #333;
    --visited: #aaa;
    --shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
    --popup: #b80a27;
    --spoiler: #ddd;

    /* Hint color theme to browser for scrollbar */
    color-scheme: dark;
}

/* Browser-defined light theme */
@media (prefers-color-scheme: light) {
    :root {
        --accent: #bb2b3b;
        --green: #00a229;
        --text: black;
        --foreground: #f5f5f5;
        --background: #ddd;
        --outside: #ececec;
        --post: #eee;
        --panel-border: 1px solid #ccc;
        --highlighted: white;
        --visited: #555;
        --shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
        --spoiler: #0f0f0f;

        /* Hint color theme to browser for scrollbar */
        color-scheme: light;
    }
}

/* Other themes are located in the "themes" folder */

/* Tokyo Night theme setting */
.tokyoNight {
    --accent: #565f89;
    --green: #73daca;
    --text: #a9b1d6;
    --foreground: #24283b;
    --background: #1a1b26;
    --outside: #24283b;
    --post: #1a1b26;
    --panel-border: 1px solid #a9b1d6;
    --highlighted: #414868;
    --visited: #414868;
    --shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
}

/* General */

::selection {
    color: var(--foreground);
    background: var(--accent);
}

:focus-visible {
    outline: 2px solid var(--accent);
}

html,
body,
div,
h1,
h2,
h3,
h4,
h5,
h6,
ul,
ol,
dl,
li,
dt,
dd,
p,
blockquote,
pre,
form,
fieldset,
table,
th,
td,
select,
input {
    accent-color: var(--accent);
    margin: 0;
    color: var(--text);
    font-family: "Inter", sans-serif;
    word-wrap: anywhere;
}

html.fixed_navbar {
    scroll-padding-top: 50px;
}

@media screen and (max-width: 800px) {
    html.fixed_navbar {
        scroll-padding-top: 100px;
    }
}

body {
    background: var(--background);
    padding-bottom: var(--footer-height);
    font-size: 15px;
    position: relative;
}

body.card {
    min-height: calc(100vh - 30px);
}

body.fixed_navbar {
    min-height: calc(100vh - 90px);
    padding-top: 60px;
}

nav {
    display: flex;

    align-items: center;

    color: var(--accent);
    background: var(--outside);
    box-shadow: var(--shadow);

    font-size: 20px;

    z-index: 2;
    top: 0;
    padding: 5px 15px;
    margin-bottom: 10px;
    min-height: 40px;
    width: calc(100% - 30px);
}

nav.fixed_navbar {
    position: fixed;
}

nav * {
    color: var(--text);
}
nav #red,
#code > span {
    color: var(--accent);
}
nav #code > svg {
    stroke: var(--accent);
}

nav #logo {
    white-space: nowrap;
    margin-right: 5px;
    flex-grow: 1;
    flex-basis: 0;
}

nav #links {
    margin-left: 10px;
    display: flex;
    flex-grow: 1;
    flex-basis: 0;
    justify-content: flex-end;
}

nav #links svg {
    display: none;
}

nav #redlib {
    vertical-align: -2px;
}

figcaption {
    margin-top: 5px;
    text-align: center;
}

#settings_link {
    opacity: 0.8;
    margin-left: 10px;
}

.popup {
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: clip;
    opacity: 0;
    position: fixed;
    width: 100vw;
    height: 100vh;
    bottom: 0;
    right: 0;
    visibility: hidden;
    transition: all 0.1s ease-in-out;
    z-index: 2;
}

/* fallback for firefox esr */
.popup {
    background-color: #000000fd;
}

/* all other browsers */
@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
    .popup {
        -webkit-backdrop-filter: blur(0.25rem) brightness(15%);
        backdrop-filter: blur(0.25rem) brightness(15%);
    }
}

.popup-inner {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    max-width: 600px;
    max-height: 500px;
    width: fit-content;
    height: fit-content;
    padding: 1rem;
    background: var(--popup-background);
    border: var(--popup-border);
    border-radius: 5px;
    transition: all 0.1s ease-in-out;
}

.popup-inner svg {
    display: unset !important;
    width: 35%;
    stroke: none;
    margin: 1rem;
}

.popup-inner h1 {
    color: var(--popup-text);
    margin: 1.5rem 1.5rem 1rem;
}

.popup-inner p {
    color: var(--popup-text);
}

.popup-inner a {
    border-radius: 5px;
    padding: 2%;
    width: 80%;
    margin: 0.5rem;
    cursor: pointer;
    transition: all 0.1s ease-in-out;
}

#goback {
    background: var(--popup-goback-background);
    color: var(--popup-goback-text);
}

#goback:not(.selected):hover {
    opacity: 0.8;
}

#toreddit {
    background: var(--popup-toreddit-background);
    color: var(--popup-toreddit-text);
    border: 1px solid var(--popup-red);
}

#toreddit:not(.selected):hover {
    background: var(--popup-toreddit-text);
    color: var(--popup-toreddit-background);
}

.popup:target {
    visibility: visible;
    opacity: 1;
}
/* ... */

